--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="C:\Users\Hai\OneDrive\Documents\App Projects\TaskEarn logo.jpg" alt="TaskEarn Logo"> 
+            <img src="C:\Users\Hai\TaskEarn\Images\TaskEarn logo.jpg" alt="TaskEarn Logo"> 
             TaskEarn
         </div>
         <div class="nav-buttons">
